    - Added the ability to disable player and creature trampling of crops (per world).
    - Towns now remember their respective states for fire, explosions, mob spawns and PVP when the World flags are toggled.
    - Towny will now attempt to repair corrupted world files.
    - Nations who change to a neutral state during a war are now correctly removed from the war.
    - Towny now logs all player issued commands to the server.log
    - Added better control over name/chat modifying - modify_chat: '{permprefix}{townynameprefix}{playername}{townynamepostfix}{permsuffix}'
    - Added custom titles. Kings can assign titles to their vassals with '/nation set title [resident] title'. The title will be used in place of the townynameprefix.
    - Added custom surnames. Kings can assign surnames to their vassals with '/nation set surname [resident] text'. The title will be used in place of the townynamepostfix.
    - Fixed an error caused by deleted residents not being cleaned up from other resident friend lists.
    - Nations enemy/Ally lists are now updated when another nation is deleted or renamed.
    - Paintings are now protected along with all other blocks.
    - townLevels and nationLevels are now full YAML nodes for easy editing (commit by dumptruckman).
    - Pistons can now only operate between similarly owned townblocks or wild areas (No piston griefing).
    - You can now block the use of '/town spawn' if you are in certain zones (unclaimed 'wilderness', Neutral towns and Enemy towns).
v0.74.1:
    - Added sanity checking to prevent colour codes in titles and surnames, and a notification message when a title/surname is cleared.
    - Removed console spam from 'send message'.
    - Disabled the use of '/town new' and '/town claim' in worlds where Towny is disabled.
    - Added 'disable_modify_chat' for those not wanting Towny to make any changes.